--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "url": "https://github.com/benjaminabel/nodebb-plugin-katex/issues"
   },
   "dependencies": {
-    "katex": "^0.4.3",
-    "string": "^3.3.0"
+    "katex": "^0.4.3"
   },
   "nbbpm": {
     "compatibility": "^0.7.0"
