--- a/package.json
+++ b/package.json
@@ -20,7 +20,15 @@
     "url": "https://github.com/benjaminabel/nodebb-plugin-katex/issues"
   },
   "dependencies": {
-    "katex": "^0.5.0"
+    "katex": "^0.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^2.4.0",
+    "eslint-config-google": "^0.4.0"
+  },
+  "scripts": {
+    "lint": "eslint **/*.js",
+    "fix": "eslint --fix **/*.js"
   },
   "nbbpm": {
     "compatibility": "^0.7.1 || ^0.8.0 || ^0.9.0"
