chore: require linting passes in test

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,13 @@
 "extends": "google"
 
 "env": {
-  "node": true
+  "node": true,
+  "browser": true
 }
 
 "rules": {
   "max-len": [2, 100, 4],
   "brace-style": [2, "1tbs", { "allowSingleLine": true }],
-  "valid-jsdoc": 0
+  "valid-jsdoc": 0,
+  "require-jsdoc": 0
 }
