--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "url": "https://github.com/benjaminabel/nodebb-plugin-katex/issues"
   },
   "dependencies": {
-    "katex": "^0.6.0"
+    "katex": "^0.7.0"
   },
   "devDependencies": {
-    "eslint": "^3.5.0",
-    "eslint-config-google": "^0.7.0",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-plugin-import": "^2.2.0",
     "semantic-release": "^4.3.5"
   },
   "scripts": {
@@ -33,6 +34,9 @@
     "format": "clang-format -i --glob=lib/**/*.js && clang-format -i --glob=static/**/*.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "test": "npm run lint"
+  },
+  "engines": {
+    "node": ">=4"
   },
   "nbbpm": {
     "compatibility": "^1.0.0"
