--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodebb-plugin-katex",
-  "version": "1.0.0-semantic-release",
+  "version": "0.3.0",
   "description": "Use Katex math parser inside NodeBB",
   "main": "./lib/index.js",
   "repository": {
@@ -25,14 +25,12 @@
   "devDependencies": {
     "eslint": "^3.18.0",
     "eslint-config-airbnb-base": "^11.1.1",
-    "eslint-plugin-import": "^2.2.0",
-    "semantic-release": "^4.3.5"
+    "eslint-plugin-import": "^2.2.0"
   },
   "scripts": {
     "lint": "eslint **/*.js",
     "fix": "eslint --fix **/*.js",
     "format": "clang-format -i --glob=lib/**/*.js && clang-format -i --glob=static/**/*.js",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "test": "npm run lint"
   },
   "engines": {
