--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "url": "https://github.com/benjaminabel/nodebb-plugin-katex/issues"
   },
   "dependencies": {
-    "katex": "^0.7.0"
+    "katex": "^0.8.3",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^3.18.0",
